--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "jest": "^29.5.0"
-  }
+    "jest": "^29.5.0",
+    "pre-commit": "^1.2.2"
+  },
+  "pre-commit":[
+    "test"
+  ]
 }
