--- a/package.json
+++ b/package.json
@@ -4,18 +4,23 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint src/**",
+    "lint-fix": "eslint src/** --fix"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "eslint": "^8.36.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.27.5",
     "husky": "^4.3.8",
     "jest": "^29.5.0"
   },
-  "husky":{
-    "hooks":{
-      "pre-commit":"npm test"
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint && npm test"
     }
   }
 }
