--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint staged"
+      "pre-commit": "lint-staged"
     }
   },
   "lint-staged":{
-    "*js":[
+    "*.js":[
       "eslint",
       "jest --findRelatedTests"
     ]
