--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "jest",
     "lint": "eslint src/**",
-    "lint-fix": "eslint src/** --fix"
+    "lint-fix": "eslint src/** --fix",
+    "format":"prettier app.js **/*.js --write"
   },
   "keywords": [],
   "author": "",
@@ -17,7 +18,8 @@
     "eslint-plugin-import": "^2.27.5",
     "husky": "^4.3.8",
     "jest": "^29.5.0",
-    "lint-staged": "^13.2.0"
+    "lint-staged": "^13.2.0",
+    "prettier": "^2.8.4"
   },
   "husky": {
     "hooks": {
