--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "lint": "eslint src/**",
     "lint-fix": "eslint src/** --fix",
     "format": "prettier app.js **/*.js --write",
-    "success-message":"echo Thank's for committing %GIT_AUTHOR_NAME%"
+    "success-message": "echo Thank's for committing %GIT_AUTHOR_NAME%"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@commitlint/cli": "^17.4.4",
     "eslint": "^8.36.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.27.5",
@@ -25,7 +26,18 @@
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged",
+      "commit-msg":"commitlint -E HUSKY_GIT_PARAMS",
       "post-commit": "npm run success-message"
+    }
+  },
+  "commitlint": {
+    "rules": {
+      "references-empty": [2, "never"]
+    },
+    "parserPreset": {
+      "parserOpts": {
+        "issuePrefixes": ["ISSUE-"]
+      }
     }
   },
   "lint-staged": {
